News site update!

--- a/Deckel-Shop/Views/Home/News.cshtml
+++ b/Deckel-Shop/Views/Home/News.cshtml
@@ -11,50 +11,14 @@
                 <div class="row">
                     <div class="col-md-4">
                         <h5>
-                            2021-02-04
-                        </h5><img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/PirateGirl.jpg" height="200" />
+                            2021-04-11
+                        </h5><img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/Celebrating_Deckel2.png" height="200" />
 
                     </div>
                     <div class="col-md-8">
                         <p>
-                            <br />
-                            <br />
-                            <br />
-                            The pirate collection is now available on our website
-                        </p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-8">
-                        <h5>
-                            2021-01-27
-                        </h5>
-                        <p>
-                            We have found the first known propeller cap. A very exclusive cap that we only have one in stock.
-                            Take the chance and buy the world's first propeller cap and brag to your friends.
-                        </p>
-                    </div>
-                    <div class="col-md-4">
-                        <img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/RobertMayerWithCap.jpg" height="200" />
-
-                    </div>
-                </div>
-                <hr />
-                <div class="row">
-                    <div class="col-md-4">
-                        <h5>
-                            2021-01-16
-                        </h5>
-                        <img class="img-thumbnail w-75" alt="Bootstrap Image Preview" src="~/Image/PropelerCap1.jpg" />
-
-                    </div>
-                    <div class="col-md-8">
-                        <br />
-                        <br />
-                        <br />
-                        <p>
-                            We fixed the problem. The site is up and runnning again after yesterdays crash. We moved to a new server and the problem will
-                            never happen again.
+                            Elon musk have decided to invest into into Deckel-shop! The future of this new brand is looking brighter then ever!
+                            Stay in touch! to celebrate this occation we are designing a new tesla styled propeller cap!
                         </p>
                     </div>
                 </div>
@@ -62,38 +26,111 @@
                 <div class="row">
                     <div class="col-md-8">
                         <h5>
-                            2021-01-15
+                            2021-03-15
                         </h5>
                         <p>
-                            We updated the shop with products. And what happens. The site has crashed but we have hired people who have fixed it.
-                            We are overwhelmed by how the response has been. The site is up again in a few hours.
+                            Elon musk, congratulation co-founder Alexander on a jobb well done working with the new opening of Deckel-Shop USA, in Jersey City!
+                            "I will be keeping a close eye on the future development of this propeller cap brand" - Elon Musk.
                         </p>
                     </div>
                     <div class="col-md-4">
-                        <img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/AdmiralCap.jpg" height="200" />
+                        <img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/Price_Deckel.jpg" height="200" />
 
                     </div>
                 </div>
                 <hr />
-                <div class="row">
-                    <div class="col-md-4">
-                        <h5>
-                            2021-01-01
-                        </h5><img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/Deckel-Shop-Logo2.png" height="200" />
+                <div class="container-fluid Newspage">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3 class="text-center">
+                                News from Deckel-Shop
+                            </h3>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <h5>
+                                        2021-02-04
+                                    </h5><img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/PirateGirl.jpg" height="200" />
 
-                    </div>
-                    <div class="col-md-8">
-                        <p>
-                            <br />
-                            <br />
-                            <br />
-                            <strong>We are up and running.</strong> Alex and Andreas have started the world's best cap business.
-                            Spread the information to everyone you know. We'll take over the world. We are newly
-                            started but we will expand our range regularly. Welcome to the Deckel Shop.
-                        </p>
+                                </div>
+                                <div class="col-md-8">
+                                    <p>
+                                        <br />
+                                        <br />
+                                        <br />
+                                        The pirate collection is now available on our website
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <h5>
+                                        2021-01-27
+                                    </h5>
+                                    <p>
+                                        We have found the first known propeller cap. A very exclusive cap that we only have one in stock.
+                                        Take the chance and buy the world's first propeller cap and brag to your friends.
+                                    </p>
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/RobertMayerWithCap.jpg" height="200" />
+
+                                </div>
+                            </div>
+                            <hr />
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <h5>
+                                        2021-01-16
+                                    </h5>
+                                    <img class="img-thumbnail w-75" alt="Bootstrap Image Preview" src="~/Image/PropelerCap1.jpg" />
+
+                                </div>
+                                <div class="col-md-8">
+                                    <br />
+                                    <br />
+                                    <br />
+                                    <p>
+                                        We fixed the problem. The site is up and runnning again after yesterdays crash. We moved to a new server and the problem will
+                                        never happen again.
+                                    </p>
+                                </div>
+                            </div>
+                            <hr />
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <h5>
+                                        2021-01-15
+                                    </h5>
+                                    <p>
+                                        We updated the shop with products. And what happens. The site has crashed but we have hired people who have fixed it.
+                                        We are overwhelmed by how the response has been. The site is up again in a few hours.
+                                    </p>
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/AdmiralCap.jpg" height="200" />
+
+                                </div>
+                            </div>
+                            <hr />
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <h5>
+                                        2021-01-01
+                                    </h5><img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/Deckel-Shop-Logo2.png" height="200" />
+
+                                </div>
+                                <div class="col-md-8">
+                                    <p>
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <strong>We are up and running.</strong> Alex and Andreas have started the world's best cap business.
+                                        Spread the information to everyone you know. We'll take over the world. We are newly
+                                        started but we will expand our range regularly. Welcome to the Deckel Shop.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
 </body>
