--- a/Deckel-Shop/Views/Home/News.cshtml
+++ b/Deckel-Shop/Views/Home/News.cshtml
@@ -6,8 +6,9 @@
         <div class="row">
             <div class="col-md-12">
                 <h3 class="text-center">
-                    News from Deckel-Shop
+                    Biggest news of the year!
                 </h3>
+                <br />
                 <div class="row">
                     <div class="col-md-4">
                         <h5>
