fixed shipping date in order history

--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
@@ -94,7 +94,14 @@
                         }
                     </td>
                     <td>
-                        @order.ShippingDate
+                        @if (order.ShippingDate == DateTime.UnixEpoch)
+                        {
+                            <p>Not shipped</p>
+                        }
+                        else
+                        {
+                            @order.ShippingDate
+                        }
                     </td>
                     <td>
                         Customer #@order.CustomerId
