--- a/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
@@ -90,7 +90,7 @@
                         <th scope="col">PRODUCT NAME</th>
                         <th scope="col">AMOUNT</th>
                         <th scope="col">PRICE</th>
-                        <th scope="col">Status</th>
+                        <th scope="col">STATUS</th>
                         <th scope="col"></th>
                     </tr>
                 </thead>
