--- a/Deckel-Shop/Views/Profile/Administrator/Users.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Users.cshtml
@@ -55,13 +55,13 @@
             <thead>
                 <tr>
                     <th>
-                        Id
+                        ID
                     </th>
                     <th>
-                        Name
+                        NAME
                     </th>
                     <th>
-                        Action
+                        ACTION
                     </th>
 
                 </tr>
