--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -5,7 +5,7 @@
 }
 @model IEnumerable<Database.Models.Order>
 
-    <script src="~/js/Admin.js"></script>
+<script src="~/js/Admin.js"></script>
 
 @*nav bar*@
 <ul class="nav nav-tabs nav-tabs AdminNav">
@@ -28,56 +28,56 @@
 
 
 @*search bar*@
-<div class="row mt-3 pt-3 mb-3">
-    <div class="col-sm-4">
+<!--<div class="row mt-3 pt-3 mb-3">-->
+    @*<div class="col-sm-4">
         <div class="input-group">
             <input type="text" class="form-control searchbarForTable" placeholder="Search by Order#, Customer# etc" id="tableSearch">
             <div class="input-group-append">
                 <button class="input-group-text"><i class="fa fa-search"></i></button>
             </div>
         </div>
-    </div>
+    </div>*@
     @*<div class="col-sm-2">
-        <div class="d-flex">
-            <div class="dropdown mr-1">
-                <button type="button" class="btn btn-primary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
-                    Status
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
-                    <a class="dropdown-item" value="1" href="#">Invoiced</a>
-                    <a class="dropdown-item" value="2" href="#">Delivered</a>
-                    <a class="dropdown-item" value="3" href="#">Cancelled</a>
+            <div class="d-flex">
+                <div class="dropdown mr-1">
+                    <button type="button" class="btn btn-primary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+                        Status
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
+                        <a class="dropdown-item" value="1" href="#">Invoiced</a>
+                        <a class="dropdown-item" value="2" href="#">Delivered</a>
+                        <a class="dropdown-item" value="3" href="#">Cancelled</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>*@
+        </div>*@
 
-</div>
+<!--</div>-->
 
 @*line break*@
-<div class="row">
+@*<div class="row">
     <div class="col">
         <hr>
     </div>
-</div>
+</div>*@
 @*-------------------------------------------------------------------------*@
 
 @*orders table*@
 
-<div class="row">
+<div class="row pt-5">
     <div class="col-sm-12">
-        <table class="table table-striped table-bordered dt-responsive display nowrap">
+        <table class="table table-striped table-bordered dt-responsive display nowrap" id="myTable">
             <thead>
                 <tr>
-                    <th scope="col">ORDER#</th>
-                    <th scope="col">ORDER DATE</th>
-                    <th scope="col">CUSTOMER NAME</th>
-                    <th scope="col">ORDER STATUS</th>
-                    <th scope="col">ORDER TOTAL</th>
-                    <th scope="col"></th>
+                    <th>ORDER#</th>
+                    <th>ORDER DATE</th>
+                    <th>CUSTOMER NAME</th>
+                    <th>ORDER STATUS</th>
+                    <th>ORDER TOTAL</th>
+                    <th>ACTION</th>
                 </tr>
             </thead>
-            <tbody class="tableSearch">
+            <tbody>
                 @foreach (var item in Model)
                 {
                     <tr>
@@ -152,3 +152,11 @@
         </div>
     </div>
 </div>
+
+
+@section Scripts{
+    <script src="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css"></script>
+    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+
+    <script src="~/js/datatable.js"></script>
+}
