changed styling on datatables

--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -29,7 +29,7 @@
 
 @*search bar*@
 <!--<div class="row mt-3 pt-3 mb-3">-->
-    @*<div class="col-sm-4">
+@*<div class="col-sm-4">
         <div class="input-group">
             <input type="text" class="form-control searchbarForTable" placeholder="Search by Order#, Customer# etc" id="tableSearch">
             <div class="input-group-append">
@@ -37,29 +37,28 @@
             </div>
         </div>
     </div>*@
-    @*<div class="col-sm-2">
-            <div class="d-flex">
-                <div class="dropdown mr-1">
-                    <button type="button" class="btn btn-primary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
-                        Status
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
-                        <a class="dropdown-item" value="1" href="#">Invoiced</a>
-                        <a class="dropdown-item" value="2" href="#">Delivered</a>
-                        <a class="dropdown-item" value="3" href="#">Cancelled</a>
-                    </div>
+@*<div class="col-sm-2">
+        <div class="d-flex">
+            <div class="dropdown mr-1">
+                <button type="button" class="btn btn-primary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+                    Status
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
+                    <a class="dropdown-item" value="1" href="#">Invoiced</a>
+                    <a class="dropdown-item" value="2" href="#">Delivered</a>
+                    <a class="dropdown-item" value="3" href="#">Cancelled</a>
                 </div>
             </div>
-        </div>*@
+        </div>
+    </div>*@
 
 <!--</div>-->
-
 @*line break*@
 @*<div class="row">
-    <div class="col">
-        <hr>
-    </div>
-</div>*@
+        <div class="col">
+            <hr>
+        </div>
+    </div>*@
 @*-------------------------------------------------------------------------*@
 
 @*orders table*@
@@ -155,8 +154,9 @@
 
 
 @section Scripts{
-    <script src="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
 
     <script src="~/js/datatable.js"></script>
 }
