--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -29,17 +29,17 @@
 
 @*search bar*@
 <div class="row mt-3 pt-3 mb-3">
-    <div class="col-sm-4">
+    @*<div class="col-sm-4">
         <div class="input-group">
             <input type="text" class="form-control searchbarForTable" placeholder="Search by Order#, Customer# etc" id="tableSearch">
             <div class="input-group-append">
                 <button class="input-group-text"><i class="fa fa-search"></i></button>
             </div>
         </div>
-    </div>
-    <div class="col-sm-2">
-        <div class="d-flex">
-            <div class="dropdown mr-1">
+    </div>*@
+    <div class="col-sm-12 text-right">
+        @*<div class="d-flex">
+            <div class="dropdown mr-1">*@
                 <button type="button" class="btn btn-primary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
                     Status
                 </button>
@@ -49,18 +49,11 @@
                         <button name="filter" class="dropdown-item" value="cancelled">Cancelled</button>
 
                     </form>
-                </div>
-            </div>
+                @*</div>
+            </div>*@
         </div>
     </div>
 
-</div>
-
-@*line break*@
-<div class="row">
-    <div class="col">
-        <hr>
-    </div>
 </div>
 
 @*-------------------------------------------------------------------------*@
@@ -69,7 +62,7 @@
 
 <div class="row">
     <div class="col-sm-12">
-        <table class="table table-striped table-bordered dt-responsive display nowrap">
+        <table class="table table-striped table-bordered dt-responsive display nowrap" id="myTable">
             <thead>
                 <tr>
                     <th scope="col">ORDER#</th>
@@ -154,3 +147,11 @@
         </div>
     </div>
 </div>
+
+@section Scripts{
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
+
+    <script src="~/js/datatable.js"></script>
+}
