--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -65,7 +65,7 @@
 
 <div class="row pt-5">
     <div class="col-sm-12">
-        <table class="table table-striped table-bordered dt-responsive display nowrap" id="myTable">
+        <table class="table table-hover dt-responsive display nowrap" id="myTable">
             <thead>
                 <tr>
                     <th>ORDER#</th>
